--- a/dependencies/mycollection/font/flaticon.css
+++ b/dependencies/mycollection/font/flaticon.css
@@ -1,10 +1,10 @@
 @font-face {
     font-family: "flaticon";
-    src: url("./flaticon.ttf?5e5b2638b2c43edb00d83f8af21dda5b") format("truetype"),
-url("./flaticon.woff?5e5b2638b2c43edb00d83f8af21dda5b") format("woff"),
-url("./flaticon.woff2?5e5b2638b2c43edb00d83f8af21dda5b") format("woff2"),
-url("./flaticon.eot?5e5b2638b2c43edb00d83f8af21dda5b#iefix") format("embedded-opentype"),
-url("./flaticon.svg?5e5b2638b2c43edb00d83f8af21dda5b#flaticon") format("svg");
+    src: url("./flaticon.ttf?23126ad76143ebbb5f210c86af6f93a2") format("truetype"),
+url("./flaticon.woff?23126ad76143ebbb5f210c86af6f93a2") format("woff"),
+url("./flaticon.woff2?23126ad76143ebbb5f210c86af6f93a2") format("woff2"),
+url("./flaticon.eot?23126ad76143ebbb5f210c86af6f93a2#iefix") format("embedded-opentype"),
+url("./flaticon.svg?23126ad76143ebbb5f210c86af6f93a2#flaticon") format("svg");
 }
 
 i[class^="flaticon-"]:before, i[class*=" flaticon-"]:before {
@@ -47,4 +47,7 @@ i[class^="flaticon-"]:before, i[class*=" flaticon-"]:before {
 }
 .flaticon-tracking:before {
     content: "\f10a";
+}
+.flaticon-testing:before {
+    content: "\f10b";
 }
