--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -7727,7 +7727,7 @@ ul.pagination-layout2 .center-btn a:hover {
   position: relative;
   z-index: 0;
   text-align: center;
-  margin-bottom: 55px;
+  margin-bottom: 0px;
 }
 
 @media only screen and (max-width: 767px) {
@@ -25025,7 +25025,7 @@ ul.pagination-layout2 .center-btn a:hover {
 }
 
 .testimonial-box-layout3 .media img {
-  width: auto;
+  max-width: 60px !important;
   border-radius: 50%;
 }
 
@@ -26337,6 +26337,7 @@ ul.pagination-layout2 .center-btn a:hover {
 
 .history-inner-layout1 .history-box-layout1 .item-content p {
   margin-bottom: 0;
+  text-align: left;
 }
 
 .history-inner-layout1 .history-box-layout1:last-child {
